[package]
name = "cram"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.0"
ndarray-linalg = { version = "0.14.1", features = ["intel-mkl-static"] }
nannou = "0.17.1"
kdtree = "0.5.1"
approx = "0.5.0"